--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,6 @@ pandas
 # pycocotools>=2.0  # COCO mAP
 # albumentations>=1.0.0
 thop  # FLOPs computation
+
+# custom ----------------------------------------
+opencv-python
